Fixed wrapped line heights caused by a CSS override.

--- a/css/src/crayon_style.css
+++ b/css/src/crayon_style.css
@@ -289,11 +289,6 @@ coloring etc.
     padding-right: 8px !important;
 }
 
-/* Tools */
-/*.crayon-syntax .crayon-toolbar .crayon-tools {
-	padding-right: 2px !important; 
-}*/
-
 .crayon-syntax .crayon-title,
 .crayon-syntax .crayon-language {
     float: left;
@@ -422,7 +417,7 @@ This has been disabled to allow more flexibility in changing font sizes.
     font-size: inherit !important;
     line-height: inherit !important;
     font-weight: inherit !important;
-    height: inherit !important;
+    height: inherit;
 }
 
 .crayon-syntax .crayon-toolbar .crayon-button .crayon-button-icon {
@@ -434,17 +429,6 @@ This has been disabled to allow more flexibility in changing font sizes.
     top: 50%;
     margin-top: -8px;
 }
-
-/*.crayon-syntax .crayon-pre .crayon-line span {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-}*/
-
-/*.crayon-syntax .crayon-toolbar .crayon-tools,*/
-/*.crayon-syntax .crayon-toolbar .crayon-tools * {*/
-/*height: inherit !important;*/
-/*}*/
 
 .crayon-syntax .crayon-toolbar .crayon-tools {
     position: absolute;
